--- a/.gitmodules
+++ b/.gitmodules
@@ -3,11 +3,10 @@
 	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
 [submodule "lib/solmate"]
 	path = lib/solmate
-	url = https://github.com/rari-capital/solmate
+	url = https://github.com/@rari-capital/solmate
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-[submodule "lib/foundry-chainlink-toolkit"]
-	path = lib/foundry-chainlink-toolkit
-	url = https://github.com/smartcontractkit/foundry-chainlink-toolkit
-	branch = feature/integration-automation
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
