--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
+  "dependencies": {
+    "seaport-types": "github:smemoshui/seaport-types#sme-poc"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/smartcontractkit/foundry-starter-kit.git"
