--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "devDependencies": {
     "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.19"
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "typechain": "^8.3.1"
   },
   "dependencies": {
     "seaport-types": "github:smemoshui/seaport-types#sme-poc"
